# surfex

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml  selfhosted-macmini.yml
MY_RUN/FORCING/: prepare_forcing.bash
conf/: profile_surfex.ihm
docs/: HPC.md
domains/drome/: OPTIONS.nam  OPTIONS_cerra.nam  OPTIONS_run.nam  OPTIONS_soda.nam  README.md  SODA.nam  arome_to_forcing.py  cerra_to_forcing.py  dem_to_surfex.py
python/: README.md  meson.build  meson.options  pyproject.toml
python/capi/: grib_api_stub.F90  sfx_capi.F90
python/karpos_surfex/: __init__.py  __main__.py  _surfex.pyx  driver.py  orchestrate.py  sencrop.py
src/: Makefile  Makefile.SURFEX.mk  Rules.LXflang.mk  Rules.LXgfortran.mk  Rules.LXifort.mk  Rules.MCflang.mk  Rules.MCgfortran.mk  configure
src/ASSIM/: assim_isban.F90  assim_nature_isba_pf.F90  assim_tebn.F90  count_snow_var_pf.F90  default_assim.F90  get_iok_assim.F90  modd_assim.F90  mode_pf.F90  modn_assim.F90  oi_control.F90  put_all_var_pf.F90  read_assim_conf.F90  read_namelists_assim.F90  snow_depletion_pf.F90  soda.F90
src/FORC/: pre_input_experiment.F90  write_netcdf_forc.F90
src/OFFLIN/: close_io_surf_ncn.F90  create_file.F90  def_var_netcdf.F90  end_io_surf_ncn.F90  enddef_io_surf_ncn.F90  error_read_surf_nc.F90  error_read_surf_ol.F90  get_date_ol.F90  init_index_mpi.F90  init_io_surf_ncn.F90  init_io_surf_oln.F90  init_outfn_flaken.F90  init_outfn_isban.F90  init_outfn_sean.F90  init_outfn_surf_atmn.F90  init_outfn_tebn.F90  init_outfn_watern.F90  init_output_ncn.F90  init_output_oln.F90  init_slope_param.F90  init_sytron_table.F90  init_write_bin.F90  init_write_txt.F90  julian.F90  modd_io_surf_nc.F90  modd_io_surf_ol.F90  modd_ol_fileid.F90  modd_select.F90  modd_write_bin.F90  modd_write_txt.F90  mode_atmo_tartes.f90  mode_dates_netcdf.F90  mode_read_surf_lfi.F90  mode_read_surf_nc.F90  mode_read_surf_ol.F90  mode_write_surf_bin.F90  mode_write_surf_lfi.F90  mode_write_surf_nc.F90  mode_write_surf_ol.F90  mode_write_surf_txt.F90  (+29 more)
src/SURFEX/: alloc_isba_landuse.F90  allocate_gr_snow.F90  arpege_stretch_a.F90  av_pgd.F90  av_pgd_param.F90  average1_cover.F90  average1_orography.F90  average_co2.F90  average_diag_evap_isban.F90  average_diag_isban.F90  average_diag_misc_isban.F90  build_pronoslistn.F90  carbon_dynamic.F90  carbon_evol.F90  carbon_spinup.F90  ch_aer_dep.F90  ch_aer_emission.F90  ch_init_snapn.F90  coare30_seaflux.F90  compute_isba_parameters.F90  control_temp_func_mg.F90  convert_cover_isba.F90  convert_patch_isba.F90  cotwores.F90  coupling_flaken.F90  coupling_isba_canopyn.F90  coupling_isba_orographyn.F90  coupling_isba_svatn.F90  coupling_isban.F90  coupling_naturen.F90  coupling_surf_atmn.F90  coupling_tsz0n.F90  dealloc_gr_snow.F90  dealloc_isban.F90  dealloc_seafluxn.F90  default_crocus.F90  (+296 more)
(+67 files in other folders)
