[build-system]
requires = ["meson-python>=0.16", "cython>=3.0", "numpy>=1.26"]
build-backend = "mesonpy"

[project]
name = "karpos-surfex"
version = "0.0.1.dev0"
description = "SURFEX OFFLINE + assimilation de surface (SODA), empaqueté CPU pour Karpos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CeCILL-C" }
authors = [{ name = "Karpos" }]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
netcdf = ["netCDF4>=1.6"]
xarray = ["xarray>=2024.1", "netCDF4>=1.6"]
sencrop = ["pandas>=2.0", "s3fs>=2024.1", "fsspec>=2024.1", "netCDF4>=1.6"]

[tool.meson-python.args]
# Chemin de la lib SURFEX pré-construite (voir ../build.sh --lib) peut être passé :
#   pip install . -Csetup-args=-Dsurfex_lib=/chemin/vers/libsurfex.a
setup = []
